# esvm

./: .gitignore  CMakeLists.txt
doc/: architecture.md  opcodes.md
utils/cc/: CMakeLists.txt  instruction_opcode.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  register_opcode.hpp  token.hpp
utils/cc/test/: CMakeLists.txt  lexer_test.cpp  main.cpp
vm/: CMakeLists.txt
